...
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454" />

        <ImageButton
            android:id="@+id/ordersButton"
            android:layout_width="37dp"
            android:layout_height="44dp"
            android:background="@drawable/orders_icon"
            android:onClick="goToOrdersClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
